<resources>
    <string name="app_name">PrototypeApp</string>
    <string name="prototype">Prototype</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="emailLogin">Email</string>
    <string name="passwordLogin">Password</string>
    <string name="home">Home</string>
    <string name="cases">CASES</string>
    <string name="queries">QUERIES</string>
    <string name="username_or_email">Username or Email</string>
    <string name="username">Username</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seentry">Seentry</string>
    <string name="privacy_settings">Privacy Settings</string>
    <string name="account_settings">Account Settings</string>
    <string name="usernameShow"><![CDATA[<username>]]></string>
    <string name="fullname"><![CDATA[<realname>]]></string>
    <string name="datejoined"><![CDATA[<datejoined>]]></string>
    <string name="edit_profile">Edit Profile</string>
    <string name="todo">TODO</string>
    <string name="logoutconfirm">Do you wish log out?</string>
    <string name="logoutConfirmText">Yes</string>
    <string name="logoutDenyText">No</string>
    <string name="takePhoto">Take a Photo</string>
    <string name="findFolder">Upload from Storage</string>
    <string name="scanText">Face Scan</string>
    <string name="uploadClueText">Upload as Clue</string>
    <string name="takeAnotherPhotoText">Take Another Photo</string>
    <string name="takenImage_contDes">Taken Image</string>
</resources>