<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ProfFragment">

        <Button
            android:id="@+id/privacySettingsButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/privacy_settings"
            app:layout_constraintEnd_toEndOf="@+id/accountSettingsButton"
            app:layout_constraintStart_toStartOf="@+id/accountSettingsButton"
            app:layout_constraintTop_toBottomOf="@+id/accountSettingsButton" />

        <Button
            android:id="@+id/accountSettingsButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/account_settings"
            app:layout_constraintEnd_toEndOf="@+id/editProfileButton"
            app:layout_constraintStart_toStartOf="@+id/editProfileButton"
            app:layout_constraintTop_toBottomOf="@+id/editProfileButton" />

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/usernameShow"
            android:textAlignment="center"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <ImageView
            android:visibility="visible"
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/todo" />

        <TextView
            android:id="@+id/realnameText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/fullname"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/usernameText"
            app:layout_constraintStart_toStartOf="@+id/usernameText"
            app:layout_constraintTop_toBottomOf="@+id/usernameText" />

        <TextView
            android:id="@+id/datejoinedText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/datejoined"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/realnameText"
            app:layout_constraintStart_toStartOf="@+id/realnameText"
            app:layout_constraintTop_toBottomOf="@+id/realnameText" />

        <Button
            android:id="@+id/editProfileButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/edit_profile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datejoinedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>

