<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/faceScanButton"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="100dp"
        android:text="@string/scanText"
        app:layout_constraintBottom_toTopOf="@+id/uploadAsClueButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photoTakenIMG" />

    <Button
        android:id="@+id/uploadAsClueButton"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:text="@string/uploadClueText"
        app:layout_constraintBottom_toTopOf="@+id/takeAnotherPhotoButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faceScanButton" />

    <Button
        android:id="@+id/takeAnotherPhotoButton"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="150dp"
        android:text="@string/takeAnotherPhotoText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadAsClueButton" />

    <ImageView
        android:id="@+id/photoTakenIMG"
        android:layout_width="360dp"
        android:layout_height="240dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="48dp"
        android:contentDescription="@string/takenImage_contDes"
        app:layout_constraintBottom_toTopOf="@+id/faceScanButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />
</androidx.constraintlayout.widget.ConstraintLayout>