<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogoutActivity">

    <TextView
        android:id="@+id/logoutConfirmText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="90dp"
        android:text="@string/logoutconfirm"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/logoutConfirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logoutDenyButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="350dp"
        android:text="@string/logoutDenyText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutConfirmButton" />

    <Button
        android:id="@+id/logoutConfirmButton"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="125dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="125dp"
        android:text="@string/logoutConfirmText"
        app:layout_constraintBottom_toTopOf="@+id/logoutDenyButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoutConfirmText" />

</androidx.constraintlayout.widget.ConstraintLayout>